<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLon"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLat"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/tv1"
        app:layout_constraintTop_toBottomOf="@+id/textViewLon"
        tools:layout_editor_absoluteX="83dp" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv2"
        app:layout_constraintTop_toBottomOf="@+id/textViewLat"
        tools:layout_editor_absoluteX="82dp" />

    <TextView
        android:id="@+id/textViewAvgSpeed"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv3"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistance"
        tools:layout_editor_absoluteX="82dp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="220dp"
        android:text="@string/bt_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="136dp"
        android:text="@string/bt_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="220dp"
        android:text="@string/bt_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>